Fix java problem